--- a/ClinicaWeb/JyGDreams/templates/edit_cita.html
+++ b/ClinicaWeb/JyGDreams/templates/edit_cita.html
@@ -16,7 +16,7 @@
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4 gap-3">
     <h2><i class="bi bi-calendar-plus me-2"></i>Editando Cita de {{ cita.paciente.nombre }} {{ cita.paciente.apellido }}</h2>
     <a href="{% url 'home_citas' cita.paciente.id %}" class="btn btn-primary">
-      <i class="bi bi-table"></i> Ver Citas
+      <i class="bi bi-table"></i> Regresar a Citas
     </a>
   </div>
 
